--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-NS_COOKIE=colorscheme=light; session=7b03844ddf0df49f46c6efba14774814; smac=1747117510-PrcbtfvcoWj8g8i23PBph5vF6HA9rVfaXfWgDodfII8; hmti_=1747878049-luJZfvsD8kxHFJCkx_OjWJ1vAdTnG_RFE-y_GeGTC98v
-#如果本地调试这里填你的cookie
+NS_COOKIE=如果本地调试这里填你的cookie
